merge:correction image